# hyperwarpspeed_CarWrapAI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: config.py  main.py
app/api/v1/endpoints/: change_color.py  wrap_car.py
app/schemas/: image.py
app/services/: car_wrapping.py  change_color.py  sticker_generate.py  stylr_transfer.py
