[project]
name = "carwrapai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "runwayml>=3.10.1",
    "ultralytics>=8.3.178",
    "uvicorn>=0.35.0",
]
